<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Enter image search</string>
    <string name="btn_search">Search</string>
    <string name="search_options_title">Advanced search options</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="site_filter_hint">Input site</string>
    <string name="save">Save</string>
    <string name="share">Share</string>

    <string-array name="image_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra-Large</item>
    </string-array>

    <string-array name="color_filters">
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="type_filters">
        <item>Faces</item>
        <item>Photo</item>
        <item>Clip Art</item>
        <item>Line art</item>
    </string-array>

</resources>
